# Babel

./: ReadMe.md  conanfile.txt
client/: CMakeLists.txt
client/includes/: Client.hpp  Contact.hpp
client/includes/audio/: Codecs.hpp  Devices.hpp  Handler.hpp  Interfaces.hpp  Types.hpp
client/includes/tcp/: TcpClient.hpp
client/includes/udp/: UdpClient.hpp  UdpServer.hpp
client/sources/: Client.cpp  main.cpp
client/sources/audio/: Codecs.cpp  Devices.cpp  Handler.cpp
client/sources/gui/: AskName.cpp  CallButton.cpp  CallWindow.cpp  CallingWindow.cpp  Contact.cpp  ContactWindow.cpp  InteractionWindow.cpp  Name.cpp  Window.cpp
client/sources/gui/qtclass/: AskName.hpp  CallButton.hpp  CallWindow.hpp  CallingWindow.hpp  ContactWindow.hpp  InteractionWindow.hpp  Name.hpp  Window.hpp
client/sources/tcp/: TcpClient.cpp
client/sources/udp/: UdpClient.cpp  UdpServer.cpp
docs/: client.wsd  protocol.txt  server.wsd
server/: CMakeLists.txt
server/includes/databaseclass/: Database.hpp
server/includes/tcp/: TcpIListener.hpp  TcpListener.hpp  TcpMessage.hpp  TcpRoom.hpp  TcpServer.hpp
server/sources/: main.cpp
server/sources/database/: Database.cpp  get_base.cpp  hist_contact.cpp  set_base.cpp
server/sources/tcp/: TcpListener.cpp  TcpRoom.cpp  TcpServer.cpp
